ressources/css/styleVueResultatRecherche.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');

body {
    height: 100vh;
}

.titre {
    font-family: 'Oswald', sans-serif;
    letter-spacing: 0.04em;
    color: black;
    margin: 0;
}

p {
    color :black;
}

.rouge {
    color: #ff5660;
}

.mainRecherche {
    width: 98%;
    height: 98%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    align-content: center;
}

.bodyRecherche {
    height: 100%;
    width: 69%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    align-content: center;
}

.controleRech {
    width: 100%;
    height: 25%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    align-content: flex-start;
}

.filtresRech {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
}

.trierPar {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
}

.trierPar > form {
    width: 50%;
    margin-left: 3%;
}

.trierPar > form > select {
    height: 25px;
    width: 150px;
    border-radius: 5px;
    border: 1px solid #ff5660;
    background-color: #ffdfe0;
}

.resultatsRecherche {
    width: 98%;
    height: 68%;
}

.parametresRecherche {
    height: 100%;
    width: 30%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    border-radius: 10px;
    background-color: white;
}

.vitrine {
    height: 40%;
    width: 98%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: center;
}

.vitrine > img {
    max-width: 80%;
}

.allOptions {
    width: 98%;
    height: 60%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
    overflow-y: auto;
}

.allOptions::-webkit-scrollbar {
    width: 10px;
    background-color: #ffdfe0;
}

.allOptions::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: #ff5660;
}

.allOptions > form {
    width: 98%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
}

.allOptions > form > .generique {
    width: 98%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-content: center;
}

.allOptions > form > div > span > {
    width: 70%;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
    background-color: red;
}

.switch {
    --s: 20px;
    height: calc(var(--s) + var(--s)/5);
    width: auto;
    aspect-ratio: 2.25;
    border-radius: var(--s);
    margin: calc(var(--s)/2);
    display: grid;
    cursor: pointer;
    background-color:#ff7a7a;
    box-sizing: content-box;
    overflow: hidden;
    transition: .3s .1s;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

.switch:before{
    content: "";
    padding: calc(var(--s)/10);
    --_g: radial-gradient(circle closest-side at calc(100% - var(--s)/2) 50%,#000 96%,#0000);
    background:
            var(--_g) 0 /var(--_p,var(--s)) 100% no-repeat content-box,
            var(--_g) var(--_p,0)/var(--s)  100% no-repeat content-box,
            #fff;
    mix-blend-mode: darken;
    filter: blur(calc(var(--s)/12)) contrast(11);
    transition: .4s, background-position .4s .1s,
    padding cubic-bezier(0,calc(var(--_i,-1)*200),1,calc(var(--_i,-1)*200)) .25s .1s;
}

.switch:checked {
    background-color: #85ff7a;
}

.switch:checked:before {
    padding: calc(var(--s)/10 + .05px) calc(var(--s)/10);
    --_p: 100%;
    --_i: 1;
}

.filtresDetail {
    width: 100%;
    min-height: 150px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    align-content: flex-start;
}

.filtre {
    display: flex;
    flex-direction: row-reverse;
    padding: 2%;
    border-radius: 10px;
    background-color: #ffe9ea;
    border: 1px solid #ff5660;
    color: #ff5660;
    font-size: 0.9em;
    margin: 1%;
}

